# hello_world

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.gradle  settings.gradle
src/: hello_world.c
src/src_c/: CMakeLists.txt  hello_world_c.c
src/src_c/include/: hello_world_c.h
src/src_c/src/: hello_world_c.c
src/src_c/test/: test.c
src/src_cpp/: CMakeLists.txt  hello_world_cpp.cpp
src/src_cpp/include/: hello_world_cpp.h
src/src_cpp/src/: CMakeLists.txt  hello_world_cpp.cpp
src/src_cpp/test/: CMakeLists.txt  test.cpp
src/src_java/: CMakeLists.txt  hello_world_java.java
src/src_java/main/java/hello_world/: App.java
src/src_python/: .coverage  hello_world_python.py
